--- a/index.html
+++ b/index.html
@@ -8,7 +8,41 @@
   <meta name="author" content="AmeriFreight Car Shipping">
   <meta name="robots" content="index, follow">
   <title>1990s Toyota Cars: Reliability in Style</title>
+  <link rel="canonical" href="https://alegaspiseo.github.io/1990s-toyota-cars/">
+  <meta name="google-site-verification" content="w2IY1ZhIbmA3T3CNpLpy06qjKmgIUWEdnPoeWn5pC5A" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "Which 1990s Toyota is the most reliable?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "The Toyota Corolla is often cited as the most reliable due to its simple design and low maintenance needs."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Are 1990s Toyotas good for restoration?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, models like the Supra and 4Runner are popular for restoration due to their collectible value and part availability."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do I ship a classic Toyota?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Use a trusted auto transport company like AmeriFreight, which offers enclosed shipping for classic cars."
+        }
+      }
+    ]
+  }
+  </script>
   <style>
     body { font-family: 'Inter', sans-serif; line-height: 1.6; color: #333; }
     h1, h2, h3, h4 { font-weight: 700; color: #1a202c; }
