--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Explore the best 1990s Toyota cars known for their reliability and style. Learn about iconic models like the Camry, Corolla, and Supra, and how to ship them safely with AmeriFreight.">
+  <meta name="description" content="Discover the top 1990s Toyota cars renowned for reliability and style, including iconic models like the Camry, Corolla, and Supra. Learn expert tips on safely shipping them with AmeriFreight.">
   <meta name="keywords" content="1990s Toyota cars, Toyota reliability, Toyota Camry, Toyota Corolla, Toyota Supra, car shipping, AmeriFreight">
   <meta name="author" content="AmeriFreight Car Shipping">
   <meta name="robots" content="index, follow">
-  <title>1990s Toyota Cars: Reliability in Style</title>
+  <title>1990s Toyota Cars: Reliability, Style & Iconic Models</title>
   <link rel="canonical" href="https://alegaspiseo.github.io/1990s-toyota-cars/">
   <meta name="google-site-verification" content="w2IY1ZhIbmA3T3CNpLpy06qjKmgIUWEdnPoeWn5pC5A" />
   <script src="https://cdn.tailwindcss.com"></script>
